--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,17 @@
   border-radius: 20px;
 }
 
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #ffffff;
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 20px 20px #23232329;
+  outline: 0px;
+}
 /* swiper js custom css */
 .swiper-pagination-bullet {
   background-color: #f5c85f !important;
@@ -81,3 +92,5 @@
     rgba(48, 73, 201, 1) 57%
   );
 }
+
+/* transition for border */
